--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,9 @@
 html,
 body {
 	width: 100%; height: 100%; padding: 0; margin: 0; box-sizing: border-box;
+	background-image: url('../images/background.jpg');
+	background-size: cover;
+	background-position: center center;
 	}
 * {
 	box-sizing: border-box;
@@ -174,8 +177,9 @@ p:last-child {
     -------------------------------------------- */ 	
 
 /* SOCIAL LINKS */
+
 .social-link i {
-	display: inline-block; font-size: 1.5em; margin: 8px 6px 8px 0; text-decoration: none; user-select: none; color: #222;
+	display: inline-block; font-size: 1.5em; margin: 8px 6px 8px 0; text-decoration: none; user-select: none; color: #fff;
 	}
 .social-link:active i {
 	transform: scale(0.8);
@@ -468,7 +472,7 @@ html a.social-link:hover:before {
   position: relative; text-decoration: none; display: inline-block; color: inherit; padding: 0 1px; transition: color ease 0.3s;
 	}
 .link-1:after {
-  content: ''; position: absolute; z-index: -1; width: 100%; height: 6%; min-height: 2px; left: 0; bottom: 0; background-color: #222; transition: all ease 0.3s;
+  content: ''; position: absolute; z-index: -1; width: 100%; height: 6%; min-height: 2px; left: 0; bottom: 0; background-color: #999; transition: all ease 0.3s;
 	}
 .link-1:hover {
   	color: #fff;
